--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
-    "express": "^4.18.2",
-    "sequelize": "^6.37.1",
-    "sqlite3": "^5.1.6"
+    "express": "^4.22.1",
+    "sequelize": "^6.37.7",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "jest": "^29.7.0",
+    "nodemon": "^3.1.11",
     "supertest": "^6.3.4"
   }
 }
